[UPDATE] Nuevos test y configuración para coverage en Sonarqube